sylvia/tests/ui/attributes/features/invalid_params.stderr
error: Invalid feature.
       = note: Supported features for contract macro: [`replies`].
 --> tests/ui/attributes/features/invalid_params.rs:9:16
  |
9 | #[sv::features(unknown_parameter)]
  |                ^^^^^^^^^^^^^^^^^
